// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<button
  className="sc-htpNat iGlKTD"
>
  Test
</button>
`;

exports[`Button renders disabled 1`] = `
<button
  className="sc-htpNat fTFVBb"
  disabled={true}
>
  Test
</button>
`;

exports[`Button renders href 1`] = `
<a
  className="sc-bwzfXH eBmlcd"
  href="https://ivesvh.com"
>
  Test
</a>
`;

exports[`Button renders onClick 1`] = `
<button
  className="sc-htpNat iGlKTD"
  onClick={[Function]}
>
  Test
</button>
`;

exports[`Button renders properties 1`] = `
<button
  className="sc-htpNat dpXcLN"
>
  Test
</button>
`;

exports[`Button renders to 1`] = `
<a
  className="sc-bdVaJa gUBIAT"
  href="https://ivesvh.com"
  onClick={[Function]}
>
  Test
</a>
`;
